# ImacAlgoWorkshop

./: CMakeLists.txt  README.md
src/: main.cpp
src/01_gardervert/: main.cpp
src/02_echangercanaux/: main.cpp
src/03_nNb/: main.cpp
src/04_negatif/: main.cpp
src/05_degrade/: main.cpp
src/06_miroir/: main.cpp
src/07_bruit/: main.cpp
src/08_rotation90/: main.cpp
src/09_rgbsplit/: main.cpp
src/10_luminosite/: main.cpp
src/11_disque/: main.cpp
src/12_cercle/: main.cpp
src/13_rosace/: main.cpp
src/14_mosaique/: main.cpp
src/15_mosaiquemiroir/: main.cpp
src/16_glitch/: main.cpp
src/17_fractale/: main.cpp
src/18_vortex/: main.cpp
src/19_tramage/: main.cpp
src/20_normalisation/: main.cpp
src/21_convolution/: main.cpp
src/22_sharpen/: main.cpp
src/23_outline/: main.cpp
src/24_emboss/: main.cpp
src/25_triPixels/: main.cpp
src/26_kuwahara/: main.cpp
